--- a/notes.tex
+++ b/notes.tex
@@ -8,6 +8,7 @@
     \item Noch Anno 1602 als Klassiker hinzufügen?
     \item Notable Mentions? Cruisader Kings, Anno 1602, 
     \item Für Verwaltung noch Quelle suchen? Schwer
+    \item Indirketes vs Direktes steuern von Einheiten (AoE vs RimWorld)
 \end{itemize}
 
 Wo unterscheiden sich Resource Management Games von anderen spielen
