--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -268,3 +268,30 @@ doi = {10.13140/RG.2.2.35431.34724}
   url={https://medium.com/shinkansen-retrogaming/timeline-of-simcity-5dbc81e2b764},
   urldate={2022-08-05},
 }
+% RimWorld
+
+@online{rimworld:colonist,
+  title={Colonist},
+  url={https://rimworldwiki.com/wiki/Colonist},
+  urldate={2022-08-09},
+}
+@online{rimworld:backstories,
+  title={Backstories},
+  url={https://rimworldwiki.com/wiki/Backstories},
+  urldate={2022-08-09},
+}
+@online{rimworld:traits,
+  title={Traits},
+  url={https://rimworldwiki.com/wiki/Traits},
+  urldate={2022-08-09},
+}
+@online{rimworld:mentalbreak,
+  title={Mental Break},
+  url={https://rimworldwiki.com/wiki/Mental_break},
+  urldate={2022-08-09},
+}
+@online{rimworld:events,
+  title={Events},
+  url={https://rimworldwiki.com/wiki/Events},
+  urldate={2022-08-09},
+}
