Finished RimWorld part, started interview part

--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -295,3 +295,34 @@ doi = {10.13140/RG.2.2.35431.34724}
   url={https://rimworldwiki.com/wiki/Events},
   urldate={2022-08-09},
 }
+@online{rimworld:resources,
+  title={Resources},
+  url={https://rimworldwiki.com/wiki/Resources},
+  urldate={2022-08-10},
+}
+
+
+@book{holtzblatt_beyer_1997, 
+  place={San Francisco, CA}, 
+  title={Contextual design: A customer-center approach to software design}, 
+  publisher={Morgan Kaufmann}, 
+  author={Holtzblatt, Karen and Beyer, Hugh}, 
+  year={1997}, 
+  pages={64 - 66}
+} 
+
+@book{baur_blasius, 
+  place={Wiesbaden}, 
+  title={Handbuch Methoden der Empirischen Sozialforschung}, 
+  publisher={Springer Fachmedien Wiesbaden}, 
+  author={Baur, Nina and Blasius Jörg}, 
+  year={2014}
+} 
+
+ @book{lankoski_bjork, 
+  place={Pittsburgh, PA}, 
+  title={Game research methods: An overview}, 
+  publisher={ETC Press}, 
+  author={Lankoski, Petri and Bjork, Staffan}, 
+  year={2015}
+ } 
