--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,9 @@
 \section{Beispiele}
 \input{2.beispiele/2.0.beispiele.tex}
 
+\section{Analyse}
+\input{3.analyse/3.0.analyse.tex}
+
 
 \newpage
 \printbibliography
