--- a/notes.tex
+++ b/notes.tex
@@ -63,3 +63,8 @@ Wo unterscheiden sich Resource Management Games von anderen spielen
     \item KI
     \item 
 \end{itemize}
+
+\subsection*{Interview für RimWorld}
+\begin{itemize}
+    \item 
+\end{itemize}
