Started theme and bees

--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -324,5 +324,61 @@ doi = {10.13140/RG.2.2.35431.34724}
   title={Game research methods: An overview}, 
   publisher={ETC Press}, 
   author={Lankoski, Petri and Bjork, Staffan}, 
-  year={2015}
+  year={2015},
+  page={95}
  } 
+ @article{Evans2005TheVO,
+  title={The value of online surveys},
+  author={Joel R. Evans and Anil Mathur},
+  journal={Internet Res.},
+  year={2005},
+  volume={15},
+  pages={195-219}
+}
+@online{discord:usage,
+  title={Discord},
+  url={https://store.epicgames.com/en-US/news/what-is-discord-and-what-is-it-used-for#:~:text=Discord%20is%20a%20free%20communications,to%20connect%20with%20people%20online.},
+  author={Craig Pearson},
+  urldate={2022-08-15},
+}
+@online{discord:statistics,
+  title={Discord Revenue and Usage Statistics (2022)},
+  url={https://www.businessofapps.com/data/discord-statistics/},
+  author={David Curry},
+  urldate={2022-08-15},
+}
+@online{bees:definition,
+  title={Honigbienen, Wildbienen und Co.},
+  url={https://www.bmel.de/DE/themen/landwirtschaft/artenvielfalt/bienen-fuettern/honigbienen-wildbienen-und-co.html},
+  urldate={2022-08-15},
+}
+@online{bees:name,
+  title={Featured Creature: European Honey Bee},
+  url={https://entnemdept.ufl.edu/creatures/misc/BEES/euro_honey_bee.htm},
+  urldate={2022-08-15},
+}
+@online{bees:wild,
+  title={Wildbienen und Honigbienen, Unterschiede und Gemeinsamkeiten},
+  url={https://www.deutschewildtierstiftung.de/aktuelles/wildbienen-und-die-honigbiene-unterschiede-und-gemeinsamkeiten},
+  urldate={2022-08-15},
+}
+@online{bees:food,
+  title={Ernährung von Bienen},
+  url={https://honig-und-bienen.de/ernaehrung-der-biene/},
+  urldate={2022-08-15},
+}
+@online{bees:honeywinter,
+  title={Nahrung der Bienen},
+  url={https://www.die-honigbiene.de/nahrung-der-bienen.html},
+  urldate={2022-08-15},
+}
+@online{bees:glucosefructose,
+  title={Nicht alles, was nach Frucht klingt, ist automatisch auch gesund. Anders als häufig vermutet, ist Fructose weder "besser" noch "gesünder" als weißer Industriezucker.},
+  url={https://www.minimed.at/medizinische-themen/stoffwechsel-verdauung/fructose/#:~:text=Gleich%20wie%20Glucose%2C%20der%20Traubenzucker,so%20hohe%20S%C3%BC%C3%9Fkraft%20wie%20Traubenzucker.},
+  urldate={2022-08-15},
+}
+@online{bees:nectartohoney,
+  title={Wie machen Bienen Honig aus Nektar?},
+  url={https://www.t-online.de/leben/familie/id_69540058/wie-machen-bienen-honig-aus-nektar-.html},
+  urldate={2022-08-15},
+}
