--- a/3.analyse/3.1.interview.tex
+++ b/3.analyse/3.1.interview.tex
@@ -25,7 +25,7 @@ Im zweiten Schritt des Interviews werden etwas spezifischere Fragen zu der Erfah
 \end{itemize}
 
 \subsubsection{Beobachtung}
-Die Phase der Beobachtung beschreibt die Spielphase. Der Proband wird aufgefordert, das Videospiel \textit{RimWorld} zu spielen. Es ist von fundamentaler Wichtigkeit für diese Phase, das die beobachtende Person keinerlei Versuch unternimmt, sich in das Spielgeschehen oder das Verhalten der beobachteten Person einmischt. Es wird auch unterlassen, begangene Fehler aufzuklären oder in irgend einer anderen Art und Weise zu helfen. 
+Die Phase der Beobachtung beschreibt die Spielphase. Der Proband wird aufgefordert, das Videospiel \textit{RimWorld} zu spielen. Es ist von fundamentaler Wichtigkeit für diese Phase, das die beobachtende Person keinerlei Versuch unternimmt, sich in das Spielgeschehen oder das Verhalten der beobachteten Person einmischt. Es wird auch unterlassen, begangene Fehler aufzuklären oder in irgend einer anderen Art und Weise zu helfen. Es ist wichtig zu erwähnen, dass nicht alle Fragen zwangsweise gestellt werden. Diese Fragen dienen lediglich als Katalog möglicher Fragen, die situativ gestellt werden können.
 
 \begin{itemize}
     \item F8: Welche Emotion wird gerade verspürt?
