--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,8 @@
 \section{Analyse}
 \input{3.analyse/3.0.analyse.tex}
 
+\section{Prototyp}
+\input{4.prototype/4.0.prototype.tex}
 
 \newpage
 \printbibliography
