Finished theme subsection, now starting with mechanics

--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -382,3 +382,50 @@ doi = {10.13140/RG.2.2.35431.34724}
   url={https://www.t-online.de/leben/familie/id_69540058/wie-machen-bienen-honig-aus-nektar-.html},
   urldate={2022-08-15},
 }
+ @book{bees:frisch, 
+  place={Berlin u.a}, 
+  title={Aus dem Leben der Bienen}, 
+  publisher={Springer}, 
+  author={Frisch, Karl von}, 
+  year={1977}
+ } 
+@online{bees:queen,
+  title={Die Bienenkönigin},
+  url={ https://www.bee-careful.com/de/initiative/die-bienenkoenigin/#:~:text=Neben%20dem%20Ablegen%20der%20Eier,auch%20w%C3%A4hrend%20des%20Schw%C3%A4rmens%20%E2%80%93%20zusammen.},
+  urldate={2022-08-17},
+}
+@online{bees:caste,
+  title={Kastensystem eines Bienenvolkes},
+  url={http://www.wilhelms-hof.de/erklaerbaer/36-honigbaer/61-kastensystem-eines-bienenvolkes.html},
+  urldate={2022-08-17},
+}
+@online{bees:homozygot,
+  title={Homozygot und Heterozygot},
+  url={https://studyflix.de/biologie/homozygot-und-heterozygot-2664},
+  urldate={2022-08-17},
+}
+@online{bees:sex,
+  title={Geschlechtsbestimmung bei Honigbienen},
+  url={https://www.lernhelfer.de/schuelerlexikon/biologie-abitur/artikel/geschlechtsbestimmung-bei-honigbienen#},
+  urldate={2022-08-17},
+}
+@online{bees:metamorphosisdefinition,
+  title={Definition Metamorphose (engl. metamorphosis)},
+  url={https://www.merriam-webster.com/dictionary/metamorphosis},
+  urldate={2022-08-17},
+}
+@online{bees:swarm,
+  title={Wie entsteht ein Bienenschwarm?},
+  url={https://www.bee-careful.com/de/initiative/bienenschwarm/},
+  urldate={2022-08-17},
+}
+@online{bees:winter,
+  title={Was machen Honigbienen im Winter?},
+  url={https://www.landwirtschaft.de/landwirtschaft-verstehen/haetten-sies-gewusst/tierhaltung/was-machen-honigbienen-im-winter#:~:text=Honigbienen%20machen%20keinen%20Winterschlaf.,der%20Traube%20sitzt%20die%20K%C3%B6nigin.},
+  urldate={2022-08-17},
+}
+@online{bees:lifeexpectancy,
+  title={Wie lange leben Bienen?},
+  url={https://bienen.info/wie-lange-leben-bienen/},
+  urldate={2022-08-17},
+}
