--- a/2.beispiele/2.2.neuerscheinungen/2.2.1.rimworld.tex
+++ b/2.beispiele/2.2.neuerscheinungen/2.2.1.rimworld.tex
@@ -39,7 +39,7 @@ Der Spieler wird nach der Anfangssequenz des Absturzes der Kolonisten nicht an d
 \end{figure}
 
 \newparagraph{User Interface}
-Das UI von RimWorld ist sehr voll, in jeder Ecke des Bildschirms finden sich direkt mehrere verschiedene Informationen, welche der Spieler erst kennenlernen und verstehen muss. Im Folgenden wird sich stark auf \autoref{image:rimworldui} berufen, anhand dessen das UI analysiert wird. Das UI ist zum besseren Verständnis in 13 verschiedene Stücke aufgeteilt, welche allesamt eigene Funktionen und einen bestimmten Mehrwert bieten. 
+Das UI von RimWorld ist recht gefüllt, denn in jeder Ecke des Bildschirms finden sich direkt mehrere verschiedene Informationen, welche der Spieler erst kennenlernen und verstehen muss. Im Folgenden wird sich stark auf \autoref{image:rimworldui} berufen, anhand dessen das UI analysiert wird. Das UI ist zum besseren Verständnis in 13 verschiedene Stücke aufgeteilt, welche allesamt eigene Funktionen und einen bestimmten Mehrwert bieten. 
 
 \begin{figure}
     \begin{center}
