--- a/4.prototype/4.0.prototype.tex
+++ b/4.prototype/4.0.prototype.tex
@@ -1,3 +1,3 @@
-Für den praktischen Anteil dieser Arbeit wird auf Grundlage der gewonnenen Erkenntnisse aus Sektion 3 ein Prototyp angefertigt. Es wird also auf die Hypothesen zurückgegriffen, welche durch die Interviews und Umfragen erarbeitet und überprüft wurden. 
+Für den praktischen Anteil dieser Arbeit wird auf Grundlage der gewonnenen Erkenntnisse aus Sektion 3 ein Prototyp angefertigt. Es wird also auf die Hypothesen zurückgegriffen, welche durch die Interviews und Umfragen erarbeitet und überprüft wurden. Außerdem wird anhand eines geeigneten Beispiels der Natur eine Thematik Stück für Stück untersucht und in Mechaniken transformiert. Konkret werden in Folgendem die Vorgänge innerhalb einer Bienenkolonie genauer beleuchtet, und erörtert, welche Elemente sich für ein Resource Management Game eignen.
 
 \input{4.prototype/4.1.thematik.tex}
