Restructured prototype section,

--- a/notes.tex
+++ b/notes.tex
@@ -9,6 +9,9 @@
     \item Notable Mentions? Cruisader Kings, Anno 1602, 
     \item Für Verwaltung noch Quelle suchen? Schwer
     \item Indirketes vs Direktes steuern von Einheiten (AoE vs RimWorld)
+    \item Wie kann man Hexabees steigend schwerer machen?
+    \item Welche Belohnung kann den Spieler zufrieden stellen?
+    \item Noch den Bienenstockbau unter 4.1. erläutern? Waben, Wachs?
 \end{itemize}
 
 Wo unterscheiden sich Resource Management Games von anderen spielen
@@ -16,6 +19,7 @@ Wo unterscheiden sich Resource Management Games von anderen spielen
 
 \subsection*{Ideen}
 \begin{itemize}
+
     \item HexaBees turn based, oder RTS?
     \item Falls RTS dann 
     \item Für Neuerscheinungen:
@@ -29,6 +33,7 @@ Wo unterscheiden sich Resource Management Games von anderen spielen
     \item Magic: The Gathering
     \item Siedler von Catan
     \item Alle Klassiker mit den neusten Version vergleichen
+    \item 
 \end{itemize}
 
 \subsection*{Fremdwörter}
