Added Gameplay and starting info

--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -429,3 +429,9 @@ doi = {10.13140/RG.2.2.35431.34724}
   url={https://bienen.info/wie-lange-leben-bienen/},
   urldate={2022-08-17},
 }
+@online{world:grids,
+  title={Amits Thoughts on Grids},
+  url={http://www-cs-students.stanford.edu/~amitp/game-programming/grids/},
+  urldate={2022-08-21},
+}
+
