--- a/4.prototype/4.4.spielbeginn.tex
+++ b/4.prototype/4.4.spielbeginn.tex
@@ -1,3 +1,2 @@
-\subsection{Rahmen}
-Es gilt, zunächst einen groben Rahmen des Spiels festzulegen. Darunter fallen der \textit{Startzustand}, der \textit{Gameplay Loop} und der \textit{Endzustand} beziehungsweise die \textit{Siegbedingungen}.
-
+\subsection{Spielbeginn}
+Das Spiel beginnt auf der nun zufällig generierten, hexagonalen Spielwelt. Es wird mit exakt zwei \textit{Arbeitsbienen} und einer \textit{Königin} gestartet, welche sich im mittleren Alter befinden. Diese Bienen starten auf drei zufälligen Kacheln nebeneinander auf einer zufällig generierten Karte.
