--- a/4.prototype/4.7.mechaniken.tex
+++ b/4.prototype/4.7.mechaniken.tex
@@ -1,2 +1,17 @@
 \subsection{Mechaniken}
 Es wurden nun in \textit{Sektion 2} und \textit{Sektion 3} einige Mechaniken und Eigenheiten von älteren und neu erschienen Management Games untersucht und Hypothesen dazu angeführt. Diese Hypothesen und Mechaniken, welche sich als besonders interessant und nutzerfreundlich erweisen, werden nun unter Berücksichtigung der in \textit{Sektion 4.1} erörterten Vorgänge innerhalb einer Bienenkolonie konkretisiert und ausgefeilt. Außerdem werden die in \textit{Sektion 1} definierten Eigenschaften eines Resource Management Games berücksichtigt und versucht, die untersuchten Gegebenheiten (Ressourcen, Ökonomie, Informationsgehalt und Verwaltungsaspekte) möglichst sinnvoll mit den Vorgängen einer Bienenkolonie zu kombinieren, um daraus ein Spiel zu gestalten, welches sehr stark an die echten Vorgänge einer solchen angelehnt ist. 
+
+\subsubsection{Ressourcen}
+Die im Spiel vorhandenen Ressourcen sind in \autoref{table:resources} aufgelistet. 
+
+\begin{table}[]
+    \centering
+    \caption{Verfügbare konkrete Ressourcen}
+    \label{table:resources}
+    \begin{tabular}{|l|l|}
+    \hline
+    Nahrung     & Nektar, Honig, Pollen, Royal Jelly, Wasser \\ \hline
+    Baumaterial & Bienenwachs                                \\ \hline
+    Einheiten   & Königinnen, Drohnen, Arbeitsbienen         \\ \hline
+    \end{tabular}
+\end{table}
