--- a/4.prototype/4.6.spielende.tex
+++ b/4.prototype/4.6.spielende.tex
@@ -1,3 +1,3 @@
-\subsection{Rahmen}
-Es gilt, zunächst einen groben Rahmen des Spiels festzulegen. Darunter fallen der \textit{Startzustand}, der \textit{Gameplay Loop} und der \textit{Endzustand} beziehungsweise die \textit{Siegbedingungen}.
+\subsection{Spielende}
+VIELLEICHT PUNKTESYSTEM ODER ANZAHL BIENEN? ANZAHL SCHWÄRMEN ODER ANZAHL ÜBERLEBTER JAHRE?
 
